@@ -52,6 +52,24 @@
 			
 			return $result;
 		}
+		
+		public function dropByIds(/* array */ $ids)
+		{
+			$cache = Cache::me();
+			
+			$result =
+				DBPool::getByDao($this->dao)->queryNull(
+					OSQL::delete()->from($this->dao->getTable())->
+					where(Expression::in($this->dao->getIdName(), $ids))
+				);
+			
+			foreach ($ids as $id)
+				$cache->mark($this->className)->delete($this->className.'_'.$id);
+			
+			$this->dao->uncacheByIds($ids);
+			
+			return $result;
+		}
 		//@}
 
 		//@{
